src/tests/variable-declarations/12.txt
variable-declarations/12.c:2:16: error: invalid initializer
 	char *str[] = "hello i am string";
 	              ^
variable-declarations/12.c:3:17: error: invalid initializer
 	char *str2[] = "hello i am string";
 	               ^
